# wave-parse

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/wave-core/: Cargo.toml
crates/wave-core/examples/: validate_breathing.rs
crates/wave-core/fuzz/: Cargo.toml
crates/wave-core/fuzz/fuzz_targets/: parse_frame.rs
crates/wave-core/src/: dsp.rs  host.rs  lib.rs  security.rs
crates/wave-core/tests/: alloc.rs  dsp.rs  host.rs  parse.rs  ring.rs  security.rs  subcarrier.rs
crates/wave-core/tests/common/: mod.rs
docs/: high-level-design.md
docs/llds/: core.md  dsp.md  host.md  security.md
docs/specs/: core.md  dsp.md  host.md  security.md
scripts/: fetch_dataset.sh
