# cargo-fuzz target for the CSI parser (CORE-PARSE-007).
# Run with: cargo +nightly fuzz run parse_frame
# Not part of the main workspace (excluded) and not built by `cargo test`.
[package]
name = "wave-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
wave-core = { path = ".." }

[[bin]]
name = "parse_frame"
path = "fuzz_targets/parse_frame.rs"
test = false
doc = false
bench = false
